# linked_list

./: .gitignore  CMakeLists.txt  linked_list.c  list.c
